--- a/Dodge/templates/Dodge/leave.html
+++ b/Dodge/templates/Dodge/leave.html
@@ -12,95 +12,261 @@
 <style>
 	/*div,span{
 		border:1px solid black;
-	}*/
-	.ilb{
-		display: inline-block;
-	}
-	table {
-		border:2px solid blue;
-		
-	}
-	tr{
-		height: 70px;
-	}
-	td{
-		border:2px solid rgb(76,136,200);
-		padding:13px;
-	}
-	input[type="text"]{
-		width:100%;
-	}
-	table tr>td:nth-of-type(1){
-		background-color: rgb(212,228,254);
-		width:40%;
-		font-size: 50px;
-	}
-	table tr>td:nth-of-type(2){
-		font-size:40px;
-	}
-	body>div{
-		background-color: white;
-	}
+		}*/
+		.ilb{
+			display: inline-block;
+		}
+		table {
+			border:2px solid blue;
 
-</style>
-<body style="background-color:rgb(239,239,239)">
-	<div style="width:100%;height:120px;background-color: rgb(16,135,221);padding-top: 20px;">
-		<div class="ilb" style="width: 10%;height: 50px;padding-top:0px;">
-			{% load  static%}
-			<img src="{% static 'Dodge/menu.svg' %}" alt="" style="width:50px;height:50px;margin-left: 20px;">
-		</div>
-		<div class="ilb" style="width:65%;height: 50px;font-size: 40px;color: white;font-weight: bold;">
-			<span>疫情期间学生请假外出验证：扫码...</span>
-		</div>
-		<div class="ilb" style="width: 20%;padding-right: 0;margin-right:0;font-size: 26px;color: rgb(184,215,230);">
-			<p>流水号: 1347038</p>
-		</div>
-	</div>
-	<div style="width:100%;background-color: rgb(237,237,237);height: 140px;">
-		<div class="ilb" style="width:100%;height: 110px;box-shadow: 0px 5px 5px #cccccc;padding-top: 30px;font-size: 40px;">
-			<div class="ilb" style="width:50%;color: green;">
-			<div class="ilb" style="width: 10px;"></div>
-			<div class="ilb" style="width: 80%;font-weight: bold;">您无需任何操作</div>
-		</div>
-			<div class="ilb" style="width:49%;">
-				<div class="ilb" style="width:100%;padding-left: 90%;">
-					{% load static %}
-					<img src="{% static 'Dodge/point.svg' %}" alt="" style="height: 30px;"></div>
+		}
+		tr{
+			height: 70px;
+		}
+		td{
+			border:2px solid rgb(76,136,200);
+			padding:13px;
+		}
+		input[type="text"]{
+			width:100%;
+		}
+		table tr>td:nth-of-type(1){
+			background-color: rgb(232,232,232);
+			text-align: center;
+			/*width:35%;*/
+			font-size: 50px;
+		}
+		table tr>td:nth-of-type(2){
+			font-size:40px;
+			background-color: rgb(232,232,232);
+			text-align: center;
+		}
+		table.none{
+			border:0px;
+		}
+		table.none td{
+			border:0px;
+		}
+		table.none td:nth-of-type(1){
+			border-right:2px solid rgb(76,136,200);
+		}
+		body>div{
+			background-color: white;
+		}
+		span.red{
+			color: red;
+		}
+		td.red:after{
+			content: '*';
+			display: inline;
+			color:red;
+		}
+
+	</style>
+	<body style="background-color:rgb(239,239,239)">
+		<div style="width:100%;height:120px;background-color: #2470a0;padding-top: 20px;">
+			<div class="ilb" style="width: 10%;height: 50px;padding-top:0px;">
+				{% load  static%}
+				<img src="{% static 'Dodge/menu.svg' %}" alt="" style="width:50px;height:50px;margin-left: 20px;">
+			</div>
+			<div class="ilb" style="width:65%;height: 50px;font-size: 40px;color: white;font-weight: bold;">
+				<span>学生请假申请:申请人(已完成)</span>
+			</div>µ
+			<div class="ilb" style="width: 20%;padding-right: 0;margin-right:0;font-size: 26px;color: white;">
+				<p>流水号: 1347038</p>
 			</div>
 		</div>
+		<div style="width:100%;background-color: rgb(237,237,237);height: 140px;">
+			<div class="ilb" style="width:100%;height: 110px;">
+				<div class="ilb" style="width:80%;color: green;">
+					<div class="ilb" style="width: 10px;"></div>
+					<div class="ilb" style="width: 80%;font-weight: bold;">
+						<span><div style="display:inline-block;color: green;box-shadow: 3px 3px 3px black;border-radius: 4px;box-shadow: 0px 5px 5px #cccccc;padding-top: 30px;font-size: 40px;text-align: center;width: 300px;">确认销假</div></span>
+						<span><div style="color: #2470a0;display:inline-block;box-shadow: 3px 3px 3px black;border-radius: 4px;box-shadow: 0px 5px 5px #cccccc;padding-top: 30px;font-size: 40px;text-align: center;width: 300px;">终止</div></span>
+					</div>
+				</div>
+				<div class="ilb" style="width:10%;">
+					<div class="ilb" style="width:100%;padding-left: 90%;">
+						{% load static %}
+						<img src="{% static 'Dodge/point.svg' %}" alt="" style="height: 30px;"></div>
+					</div>
+				</div>
+			</div>
+
+			<div style="width: 95%;height:auto;box-shadow: 0px 5px 5px #cccccc;margin:auto;overflow: scroll;margin-bottom: 20px;color: white;height: 130px;font-size: 40px;">
+				<div style="background-color: rgb(69,158,69);height: 100%;width: 1520px;">
+					<div style="display: inline-flex;align-items: center;height: 100%;padding-left: 20px;padding-right: 20px;">
+						<p style="line-height: 100%;margin:0;">填写申请</p>
+					</div>
+
+					<div style="display: inline-flex;width: 10px;height: 100%;vertical-align: top;flex-direction: column;">
+						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(25deg);"></div>
+						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(-25deg);"></div>
+					</div>					
+					<div style="display: inline-flex;align-items: center;height: 100%;padding-left: 20px;padding-right: 20px;">
+						<p style="line-height: 100%;margin:0;">辅导员审核</p>
+					</div>
+					<div style="display: inline-flex;width: 10px;height: 100%;vertical-align: top;flex-direction: column;">
+						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(25deg);"></div>
+						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(-25deg);"></div>
+					</div>
+					<div style="display: inline-flex;align-items: center;height: 100%;padding-left: 20px;padding-right: 20px;">
+						<p style="line-height: 100%;margin:0;">学院分管学生工作副书记审核</p>
+					</div>
+					<div style="display: inline-flex;width: 10px;height: 100%;vertical-align: top;flex-direction: column;">
+						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(25deg);"></div>
+						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(-25deg);"></div>
+					</div>
+					<div style="display: inline-flex;align-items: center;height: 100%;padding-left: 20px;padding-right: 20px;">
+						<p style="line-height: 100%;margin:0;">完成（审核通过）</p>
+					</div>
+				</div>
+			</div>
+
+			{# 正文 #}
+			<div style="width: 95%;height:auto;box-shadow: 0px 5px 5px #cccccc;padding-top: 100px;padding-bottom:100px;margin:auto;">
+				<table style="width: 80%;margin-left: 10%">
+					<tr><td>申请日期</td><td>{{now_date}}</td></tr>
+					<tr><td>学&emsp;&emsp;号</td><td>{{stu_id}}</td></tr>
+					<tr><td>姓&emsp;&emsp;名</td><td>{{name}}</td></tr>
+					<tr><td class="red">性&emsp;&emsp;别</td><td>{{gender}}</td></tr>
+					<tr><td class="red">联系方式</td><td>{{phone_number}}</td></tr>
+					<tr><td>所在院系</td><td>{{college}}</td></tr>
+					<tr><td class="red">专&emsp;&emsp;业</td><td>{{major}}</td></tr>
+					<tr><td class="red">班&emsp;&emsp;级</td><td>{{class_name}}</td></tr>
+					<tr><td class="red">身份证号码</td><td>{{id_number}}</td></tr>
+					<tr><td class="red">辅导员姓名</td><td>{{instructor_name}}</td></tr>
+					<tr style="height:90px;"><td colspan="2"></td></tr>
+					<tr><td class="red">选择类型</td><td style="text-align:left;">事假</td></tr>
+					<tr><td class="red">是否离宁</td><td style="text-align:left;">
+						<div>
+							<div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: white;"></div>
+							<label for="yes">是</label></div>
+							<div>
+								<div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: "><div style="width: 16px;height: 16px;border-radius: 10px;background-color: #cccccc;margin: auto;margin-top: 6px;"></div></div>
+								<label for="no">否</label>
+							</div>
+						</td></tr>
+						<tr><td class="red" rowspan="3">去向目的地</td><td style="font-size:40px;">江苏省<tr><td style="font-size:40px;">南京市</td></tr><tr><td style="font-size:40px;">江北新区</td></tr></td></tr>
+						<tr>
+							<td class="red">请假事由</td>
+							<td>事假</td>
+						</tr>
+						<tr>
+							<td>请假天数</td>
+							<td>1</td>
+						</tr>
+						<tr>
+							<td class="red">离校具体时间</td>
+							<td style="padding:0px;height:104px;">
+
+								<table class="none" style="width:100%;height:178px;`">
+									<tr><td style="width:50%;font-size:32px;">{{now_date}}</td><td style="width:50%;fontsize:40px;">8:00</td></tr>
+								</table>
+							</td>
+						</tr>
+						<tr>
+							<td class="red">返校具体时间</td>
+							<td style="padding:0px;height:104px;">
+
+								<table class="none" style="width:100%;height:178px;`">
+									<tr><td style="width:50%;font-size:32px;">{{now_date}}</td><td style="width:50%;fontsize:40px;">23:00</td></tr>
+								</table>
+							</td>
+						</tr>
+						<tr><td colspan="2" style="color:red;font-size:40px;text-align:left;">说明：进出校验证时间必须在离校具体时间～返校具体时间之间；否则验证不通过。</td></tr>
+						<tr><td>附&emsp;&emsp;件</td><td></td></tr>
+						<tr><td class="red">请假期间有无任课教师</td><td style="text-align:left;">
+							<div>
+								<div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: white;"></div>
+								<label for="yes">有</label>
+							</div>
+							<div>
+								<div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: "><div style="width: 16px;height: 16px;border-radius: 10px;background-color: #cccccc;margin: auto;margin-top: 6px;"></div>
+							</div>
+							<label for="no">无</label>
+						</div>
+					</td></tr>
+					<tr><td>郑重提醒</td><td>请假期间请注意生命财产安全，责任自负！</td></tr>
+					<tr style="border:0px solid ;"><td colspan="2" style="border:none;background-color: white;"></td></tr>
+					<tr style="margin-top: 10px;"><td  rowspan="2">辅导员意见</td>
+						<td style="text-align: left;">
+							<div>
+								<div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: "><div style="width: 16px;height: 16px;border-radius: 10px;background-color: #cccccc;margin: auto;margin-top: 6px;"></div>
+							</div>
+							<label for="yes">同意</label>
+						</div>
+						<div>
+							<div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: white;">
+							</div>
+							<label for="no">退回</label>
+						</div>
+						<div><div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: white;"></div><label for="no">不同意</label></div>
+					</td>
+				</tr>
+				<tr><td><div style="height: 200px;"></div></td></tr>
+				<tr><td>审批人</td><td>{{instructor_name}}</td></tr>
+				<tr><td>审批时间</td><td>{{now_date}}</td></tr>
+				<tr style="margin-top: 10px;"><td  rowspan="2">学院分管学生工作副书记意见意见</td><td style="text-align: left;">
+					<div>
+						<div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: "><div style="width: 16px;height: 16px;border-radius: 10px;background-color: #cccccc;margin: auto;margin-top: 6px;"></div>
+					</div>
+					<label for="yes">同意</label>
+				</div>
+				<div><div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: white;"></div><label for="no">退回</label></div>
+				<div><div style="display:inline-block;height: 30px;width:30px;border:1px solid #cccccc;border-radius: 15px;margin-right: 20px;box-shadow: inset 1px 1px 5px #dddddd;background-color: white;"></div><label for="no">不同意</label></div>
+			</td></tr>
+			<tr><td><div style="height: 200px;"></div></td></tr>
+			<tr><td>审批人</td><td>{{secretary_name}}</td></tr>
+			<tr><td>审批时间</td><td>{{now_date}}</td></tr>
+		</table>
+
+		<div id="tb2" style="border:2px dashed black;width:83%;margin-left:10%;display:none;">
+			<table style="width: 96.3%;">
+				<tr><td>请假开始时间</td><td id="date1"></td></tr>
+				<tr><td>请假结束时间</td><td id="date2"></td></tr>
+				<tr><td>详情</td><td><a href="" style="color:#0560a6">详情链接</a></td></tr>
+			</table>
+		</div>
+	</div>
+	<div style="width:95%;font-size:40px;color:#0560A6;box-shadow:5px 5px 5px #cccccc;padding-top:30px;padding-bottom:30px;padding-left:40px;padding-right: 40px;margin: auto;margin-top: 50px;">
+		<div style="padding-bottom: 20px;">
+			<img src="{% static 'Dodge/ico_user.png' %} " alt="" style="width:32px;marigin-right:10px;"> 
+			<span style="font-weight: bold;">您({{secretary_name}})</span>
+			<span>填写/办理了</span>
+			<span style="font-weight: bold;">学院分管学生工作副书记审核意见(</span>
+			<span style="color:green;">提交</span>
+			<span style="font-weight: bold;">)</span>
+		</div>
+		<div style="width:50%;margin:auto;" id="history_line"><span style="display:inline-block;transform: rotate(90deg);">&raquo;</span><span style="font-size: 80%;">&nbsp;点击展开两个较早历史</span></div>	
+		<span style="display: none;" id="history_block">
+			<div style="height: 0;border-top: 2px solid gray"></div>
+			<div style="padding-bottom: 20px;">
+				<img src="{% static 'Dodge/ico_user.png' %} " alt="" style="width:32px;marigin-right:10px;"> 
+				<span style="font-weight: bold;">您({{instructor_name}})</span>
+				<span>填写/办理了</span>
+				<span style="font-weight: bold;">辅导员审核意见(</span>
+				<span style="color:green;">提交</span>
+				<span style="font-weight: bold;">)</span>
+			</div>
+			<div style="height: 0;border-top: 2px solid gray"></div>
+			<div style="padding-bottom: 20px;">
+				<img src="{% static 'Dodge/ico_user.png' %} " alt="" style="width:32px;marigin-right:10px;"> 
+				<span style="font-weight: bold;">您({{name}})</span>
+				<span>填写/办理了</span>
+				<span style="font-weight: bold;">申请人(</span>
+				<span style="color:green;">提交</span>
+				<span style="font-weight: bold;">)</span>
+			</div>
+		</span>
 	</div>
 
-	{# 正文 #}
-	<div style="width: 100%;height: 2000px;box-shadow: 0px 5px 5px #cccccc;padding-top: 100px;">
-		<table style="width: 80%;margin-left: 10%">
-			<tr><td>姓名</td><td>{{name}}</td></tr>
-			<tr><td>学号</td><td>{{stu_id}}</td></tr>
-			<tr><td>学院</td><td>{{college}}</td></tr>
-			<tr><td>班级</td><td>{{class_name}}</td></tr>
-			<tr><td>身份证号码</td><td>{{id_number}}</td></tr>
-			<tr><td>手机号码</td><td>{{phone_number}}</td></tr>
-		</table>
-		<div id="btn1" style="text-align:center;padding:20px;" > <button style="font-size:40px;width:60%;border-radius:10px;background-color:rgb(245,245,245);box-shadow:none;border:2px solid rgb(180,180,180);">验证</button></div>
-		<div id="tb2" style="border:2px dashed black;width:83%;margin-left:10%;visibility:hidden">
-		<table style="width: 96.3%;">
-			<tr><td>请假开始时间</td><td id="date1"></td></tr>
-			<tr><td>请假结束时间</td><td id="date2"></td></tr>
-			<tr><td>详情</td><td><a href="" style="color:#0560a6">详情链接</a></td></tr>
-		</table>
-		</div>
-		<div id="cfm" style="height: 300px;width: 100%;padding-top: 100px;text-align: center;visibility: hidden;">
-			{% load static %}
-			<img class="ilb" src="{% static 'Dodge/confirmed.png' %}" alt="" style="width: 200px;margin: auto;">
-		</div>
-		<div style="width: 80%;margin-left: 15%;font-size: 40px;margin-top:100px;" id="date3">2021年07月05日 16:20:15</div>
-	</div>
-	<div class="ilb" style="width:100%;margin-top:50px;height:110px;font-size:40px;box-shadow:5px 5px 5px #cccccc;padding-top:30px;padding-bottom:30px;padding-left:40px;"><img src="{% static 'Dodge/ico_user.png' %} " alt="" style="width:32px;marigin-right:10px;"> <span style="color:rgb(247,165,40);">您({{name}})</span><span style="color:#0560A6">正在填写/办理<span style="font-weight:bold;">扫码验证</span></span></div>
 	<div style="width:100%;border-top:1px solid gray;margin-top:30px;"></div>
 	<div style="width:85%;text-align:center;font-size:28px;margin:auto;padding-top:20px;padding-bottom:20px;color:gray;background-color:rgb(239,239,239)">© 2009 - 2021. 南京信息工程大学(nuist.edu.cn), All rights reserved. Version 20201230-181144</div>
 </body>
 <script>
-Date.prototype.Format = function (fmt) {  
-    var o = {
+	Date.prototype.Format = function (fmt) {  
+		var o = {
         "M+": this.getMonth() + 1, //月份 
         "d+": this.getDate(), //日 
         "h+": this.getHours(), //小时 
@@ -111,11 +277,11 @@ Date.prototype.Format = function (fmt) {
     };
     if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
     for (var k in o)
-    if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+    	if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
     return fmt;
 }
 
-	var mydate = new Date();
+var mydate = new Date();
 	// mydate = mydate.setDate(mydate.getDate());
 	mydate.setTime(mydate.getTime()-(Math.random(5,10)*5)*1000*60*60);
 	mydate1 = mydate.Format("yyyy-MM-dd hh:mm");
@@ -129,8 +295,8 @@ Date.prototype.Format = function (fmt) {
 	mydate2 = mydate.Format("yyyy-MM-dd hh:mm");
 	$("#date2").text(mydate2.toString());
 	$("#btn1").click(function(){
-		$("#tb2").css("visibility","visible");
-		$("#cfm").css("visibility",'visible');
+		$("#tb2").css("display","block");
+		$("#cfm").css("display",'block');
 	});
 	setInterval(function(){
 		current_date = new Date().Format("yyyy-MM-dd hh:mm:ss")
@@ -138,6 +304,11 @@ Date.prototype.Format = function (fmt) {
 		timebtm = timebtm.slice(0,4)+'年'+timebtm.slice(5,7)+'月'+timebtm.slice(8,10)+'日 '+timebtm.slice(11,timebtm.length);
 		$("#date3").text(timebtm);
 	},100);
+
+$("#history_line").click(()=>{
+	$("#history_block").css("display","inline");
+	$("#history_line").css("display","none");
+})
 </script>
 
 </html>
