--- a/tech_exh/templates/tech_exh/index2.html
+++ b/tech_exh/templates/tech_exh/index2.html
@@ -20,6 +20,9 @@
     {% load static %}
     <link rel="stylesheet" href='{% static "tech_exh/css/arrange.css" %}'>
     <link rel="stylesheet" href='{% static "tech_exh/css/animation.css" %}'>
+
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
 </head>
 <style>
     body{ margin: 0; padding: 0; height: 100vh;overflow: hidden;}
@@ -159,12 +162,6 @@
             <input type="checkbox" id="switch4" value="auto-play" style="display: none;">
         </div>
     </div>
-<!--     <div class="map-overlay" id="overlay-status" style="background-color: white;bottom: calc(25vh + 60px);right:30px;top:auto;left: auto;height: 50px;width: 15vw;border-radius:30px;padding-top:0;padding-bottom:0;padding-left: 20px;display: flex;align-items:center;">
-        <div style="flex:1;height: 32px;">
-            <div style="display:inline-block;width: 32px;height: 32px;border: 2px solid #FE6060;border-radius: 50%;opacity: 1;padding-top: 6px;padding-left: 6px;"><div style="width: 16px;height: 16px;background: #FF6060;border-radius: 50%;opacity: 1;"></div></div>
-        </div>
-        <div style="flex:3;display: inline-block;"><h2 style="margin:0;font-size: 15px;line-height: 15px;display: inline-block;" id="status_text"></h2></div>
-    </div> -->
 
     <div id="colorbar" style="display: flex;width:40px;height: 230px;right:30px;position: absolute;bottom: calc(25vh + 45px);border-radius: 5px;text-align: center;overflow: hidden;font-size: 10px;line-height: 25px;flex-direction: column;font-weight: bold;">
     </div>
@@ -173,7 +170,7 @@
     <div class="map-overlay overlay-list" id="overlay-time-select" style="left:calc(160px + 150px + max(25vw , 400px));top:140px;">
         <ul>
             <li><button id='time0'>2021-08</button></li>
-            <li><button id='time1' >2021-09</button></li>
+            <li><button id='time1'>2021-09</button></li>
             <li><button id='time2'>2021-10</button></li>
             <li><button id='time3'>2021-11</button></li>
             <li><button id='time4'>2021-12</button></li>
@@ -239,13 +236,12 @@
         $("#page").css('cursor','auto');
         $("#home-overlay").css('cursor','auto');
         $("#home-btn button").html('START').css('background-color','white').css('cursor','pointer').attr('disabled',false);
-    },6000);
+    },1000);
     var chart_data;
     var heatmap_data;
     var rendered_num = 0;
     const map = map_init();
     bindEvents();
-    // $("#status_text").html('数据加载中');
     function addRasterTileLayer(map, url, sourceId, layerId) {
         if(sourceId=='cvaw'){
             map.addSource(sourceId, {
@@ -285,12 +281,12 @@
         //     }
         //     rendered_num++;
         // };
-        for(var i=0;i<24;i++){
-            // render_countour('http://localhost:8000/static/tech_exh/data/contour/contour'+i+'.geojson')
-            // render_contour_byImage('/static/tech_exh/data/contour/pic/'+i+'.png');
-            render_countour('/static/tech_exh/data/contour/contour_line/contour'+i+'.geojson')
-        };
-        render_continents();
+        // for(var i=0;i<24;i++){
+        //     // render_countour('http://localhost:8000/static/tech_exh/data/contour/contour'+i+'.geojson')
+        //     // render_contour_byImage('/static/tech_exh/data/contour/pic/'+i+'.png');
+        //     render_countour('/static/tech_exh/data/contour/contour_line/contour'+i+'.geojson')
+        // };
+       // render_continents();
 
 // $("#status_text").html('地图渲染完成');
 // $("#control_charts").css('pointer-events','none');
