--- a/Dodge/templates/Dodge/leave.html
+++ b/Dodge/templates/Dodge/leave.html
@@ -110,7 +110,7 @@
 						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(25deg);"></div>
 						<div style="height: 50%;width: 100%;background-color: white;display: block;transform: skew(-25deg);"></div>
 					</div>
-					<div style="display: inline-flex;align-items: center;height: 100%;padding-left: 20px;padding-right: 20px;background-color: #2470a0;">
+					<div style="display: inline-flex;align-items: center;height: 100%;padding-left: 20px;padding-right: 20px;">
 						<p style="line-height: 100%;margin:0;">申请人销假</p>
 					</div>
 					<div style="display: inline-flex;width: 10px;height: 100%;vertical-align: top;flex-direction: column;">
