--- a/Arceus/templates/halfave/MainPage.html
+++ b/Arceus/templates/halfave/MainPage.html
@@ -10,14 +10,110 @@
     <!-- Don't use this in production: -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 	{% comment %} <script src="http://localhost:8097"></script> {% endcomment %}
+	<!-- BootStrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 	{% load static %}
 	<link rel="stylesheet" href="{% static 'halfave/css/main.css' %}" type="text/css"></link>
 </head>
 
-<body>
-	<div id="component-goes-here">1</div>
+<body style="background-color:black;">
+	<div class="container-fluid d-flex justify-content-center fixed-top" id="nav"></div>
+	<div id="cover" class="bg-image container-fluid">
+		<div class="row flex-column justify-content-center" id="coverCenter"> 
+			<div id="coverHeader"></div>
+		</div>
+		<div class="row text-center" id="coverSlideControl"></div>
+	</div>
+
+	<div id="section1" class="container-fluid text-center">
+		<div class="row flex-column justify-content-center">
+			<div class="col-10 offset-1 h-75 " id="section1Main">
+				<div class="row h-100 flex-column justify-content-center">
+					<div class="col-2 h-75 center-block" id="sec1Left"></div>
+					<div class="col-8 h-50 text-center" id="sec1Center"></div>
+					<div class="col-2 h-75 text-center" id="sec1Right"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
-	<script type="text/babel" src="{% static 'halfave/main.js' %}">
-		
-	  </script>
+	<div id="section2" class="container-fluid">
+		<div class="row h-50">
+			<div class="col-lg-4 offset-lg-8 col-xs-12">
+				<div class="row h-75">
+					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec2Header"></div>
+					<div class="col-lg-1 col-md-12 text-center"><div id="sec2HeaderDeco" class="text-lg-start text-md-center text-sm-center text-xs-center"></div></div>
+					<div class="row text-lg-start text-xs-center" id="sec2Para"></div>
+				</div>
+			</div>
+		</div>
+		<div class="marginBlock"></div>
+		<div class="row h-50">
+			<div class="col-lg-8 col-md-12">
+				<div class="row h-80">
+					<div class="col-12" id="sec2Pic"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="section3" class="container-fluid bg-image" >
+		<div class="row h-50">
+			<div class="col-lg-4 col-xs-12">
+				<div class="row h-75">
+					<div class="col-lg-1 col-md-12 text-center"><div id="sec3Dots"></div></div>
+					<div class="row text-lg-start text-md-center" id="sec3Para"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row h-50">
+			<div class="col-12">
+				<div class="row h-100 flex-column justify-content-end">
+					<div class="col-12 " id="sec3BottomText"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="section4" class="container-fluid">
+		<div class="row h-50">
+			<div class="col-lg-4 offset-lg-8 col-xs-12">
+				<div class="row h-75">
+					<div class="col-lg-1 col-md-12 text-center"><div id="sec4Dots" class="w-100"></div></div>
+					<div class="row text-lg-start text-md-center" id="sec4Para"></div>
+				</div>
+			</div>
+		</div>
+		<div class="marginBlock"></div>
+		<div class="row h-50">
+			<div class="col-lg-8 col-md-12">
+				<div class="row h-80">
+					<div class="col-12" id="sec4Pic"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="section5" class="container-fluid">
+		<div class="row h-100 flex-column justify-content-center">
+			<div class="col-lg-6 offset-lg-3 col-xs-12" id="sec5Center">
+			</div>
+		</div>
+	</div>
+	<div id="section6" class="container-fluid">
+		<div class="row h-100 flex-column justify-content-center ">
+			<div class="col-12 text-center">
+				<p>&copy 2022 Half Ave. All rights reserved.</p>
+			</div>
+		</div>
+	</div>
+
+
+	{% comment %} <div class="bg-image" 
+     style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
+            height: 100vh">
+	</div> {% endcomment %}
+
+	<script type="text/babel" src="{% static 'halfave/main.js' %}"></script>
 </body>
