--- a/Arceus/templates/Dodge/enter.html
+++ b/Arceus/templates/Dodge/enter.html
@@ -109,7 +109,7 @@
 					<div><span style="font-size: 50px;">{{college}}</span></div>
 					<div></div>
 					<span id="datetime" style="font-size: 45px;font-weight: bold;"></span>
-					<div style="width:90%;margin-left: 5%;border:10px solid rgb(106,175,118)"><img src="{% static 'Dodge/qrcode321281199907285178.png' %}" style="width: 100%;" alt=""></div>
+					<div style="width:90%;margin-left: 5%;border:10px solid rgb(106,175,118)"><img id="qrcodeImg" src="{% static 'Dodge/qrcode321281199907285178.png' %}" style="width: 100%;" alt=""></div>
 					<div style="font-size: 50px;color:red;"><span>有效时间：<span id="today1"></span>至<span id="today2"></span></span></div>
 					<div style="font-size: 50px;font-weight: bold;">审核状态：审核通过</div>
 					<div style="width: 40%;margin-left: 30%;font-size: 50px;color:gray;background-color: rgb(106,175,118);padding-top: 10px;padding-bottom: 10px;font-style: italic;margin-top: 20px;">已进校</div>
@@ -165,6 +165,7 @@ var mydate = new Date();
 	$("#today1").text(mydate2+" 07:00 ");
 	$("#today2").text(" "+mydate2+" 23:30 ");
 
+$("#qrcodeImg").attr('src', '/static/Dodge/qrcode{{id_number}}.png');
 
 
 $("#history_line").click(()=>{
