--- a/Arceus/templates/halfave/MainPage.html
+++ b/Arceus/templates/halfave/MainPage.html
@@ -14,6 +14,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 	{% load static %}
 	<link rel="stylesheet" href="{% static 'halfave/css/main.css' %}" type="text/css"></link>
+	<link rel="stylesheet" href="{% static 'halfave/css/animation.css' %}" type="text/css"></link>
 </head>
 
 <body style="background-color:black;">
