--- a/Arceus/templates/halfave/MainPage.html
+++ b/Arceus/templates/halfave/MainPage.html
@@ -20,10 +20,10 @@
 <body style="background-color:black;">
 	<div class="container-fluid d-flex justify-content-center fixed-top" id="nav"></div>
 	<div id="cover" class="bg-image container-fluid">
-		<div class="row flex-column justify-content-center" id="coverCenter"> 
+		<div class="row flex-column justify-content-center h-75" id="coverCenter"> 
 			<div id="coverHeader"></div>
 		</div>
-		<div class="row text-center" id="coverSlideControl"></div>
+		<div class="row text-center h-25" id="coverSlideControl"></div>
 	</div>
 
 	<div id="section1" class="container-fluid text-center">
@@ -40,7 +40,7 @@
 	
 	<div id="section2" class="container-fluid">
 		<div class="row h-50">
-			<div class="col-lg-4 offset-lg-8 col-xs-12">
+			<div class="col-lg-4 col-xs-12">
 				<div class="row h-75">
 					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec2Header"></div>
 					<div class="col-lg-1 col-md-12 text-center"><div id="sec2HeaderDeco" class="text-lg-start text-md-center text-sm-center text-xs-center"></div></div>
@@ -50,7 +50,7 @@
 		</div>
 		<div class="marginBlock"></div>
 		<div class="row h-50">
-			<div class="col-lg-8 col-md-12">
+			<div class="col-lg-8 offset-lg-4 col-md-12">
 				<div class="row h-80">
 					<div class="col-12" id="sec2Pic"></div>
 				</div>
@@ -80,7 +80,7 @@
 		<div class="row h-50">
 			<div class="col-lg-4 offset-lg-8 col-xs-12">
 				<div class="row h-75">
-					<div class="col-lg-1 col-md-12 text-center"><div id="sec4Dots" class="w-100"></div></div>
+					<div class="col-lg-2 col-md-12 text-left"><div id="sec4Dots" class="w-100"></div></div>
 					<div class="row text-lg-start text-md-center" id="sec4Para"></div>
 				</div>
 			</div>
