--- a/Arceus/templates/halfave/MainPage.html
+++ b/Arceus/templates/halfave/MainPage.html
@@ -46,7 +46,7 @@
 				<div class="row h-75">
 					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec2Header"></div>
 					<div class="col-lg-1 col-md-12 text-center"><div id="sec2HeaderDeco" class="text-lg-start text-md-center text-sm-center text-xs-center"></div></div>
-					<div class="row text-lg-start text-xs-center" id="sec2Para"></div>
+					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec2Para"></div>
 				</div>
 			</div>
 		</div>
@@ -65,7 +65,7 @@
 				<div class="row h-75">
 					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec3MobileHeader"></div>
 					<div class="col-lg-1 col-md-12 text-center"><div id="sec3MobileHeaderDeco" class="text-lg-start text-md-center text-sm-center text-xs-center"></div></div>
-					<div class="row text-lg-start text-xs-center" id="sec3MobilePara"></div>
+					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec3MobilePara"></div>
 				</div>
 			</div>
 		</div>
