--- a/static/halfave/css/main.css
+++ b/static/halfave/css/main.css
@@ -11,7 +11,7 @@ span{
 	font-family: 'Termina';
 }
 @media (min-width: 544px) {  
-	h1 {font-size:24px;} /*1rem = 16px*/
+	html {font-size:24px;} /*1rem = 16px*/
   }
    
   /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
@@ -68,7 +68,7 @@ div#navBaseLine {
 	height: 40px;
 	border-radius: 50%;
 	background-color: rgba(0, 0, 0, 0);
-	border: 1px solid #55ffe9;
+	border: 2px solid #55ffe9;
 	padding: 0;
 	margin-left: 10px;
 	margin-right: 10px;
@@ -77,14 +77,20 @@ div#navBaseLine {
 .CoverHeader .IconButton {
 	width: 100px;
 	height: 100px;
+	margin-left: 30px;
+	margin-right: 30px;
 }
-#sec5Center .IconButton {
+#sec5IconSetMobile .IconButton {
 	width: 100px;
 	height: 100px;
+	margin-left: 30px;
+	margin-right: 30px;
 }
 #coverBottom img {
 	width: 90%;
 	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 5vh;
 }
 .IconButton:hover {
 	border-color:  #a0fff2;
@@ -234,28 +240,30 @@ div#cover>#coverCenter {
 	vertical-align: middle;
 }
 
-.CoverHeader>div:has(.bottomText) {
+#coverBottomText {
 	display: inline-block;
 	line-height: 100%;
-	width: 60%;
+	width: 70%;
 	position: relative;
-	top:-3vw
+	top: -40px;
 }
 .CoverHeader>div>div {
 	display: inline-block;
 }
 .CoverHeader>div>div:nth-child(1) {
-	width: 55%;
+	width: 64%;
 }
 .CoverHeader>div>div:nth-child(2) {
 	width: 15%;
 }
 .CoverHeader>div>div:nth-child(3) {
-	width: 30%;
+	width: 21%;
 }
 .CoverHeader>img {
 	width: 70vw;
 	vertical-align: middle;
+	position: relative;
+	top:20px;
 }
 .Header {
 	color: #55ffe9;
@@ -268,16 +276,17 @@ div#cover>#coverCenter {
 	font-size: 1.5rem;
 }
 #section1 {
-	height: calc(50vh + 300px);
-	min-height: 500px;
+	height: calc(80vh + 200px);
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 #section1>div {
 }
 #section1Main {
 	background-color: rgb(18, 30, 32);	
 	border-radius: 20px;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
 #test {
@@ -342,11 +351,10 @@ div#cover>#coverCenter {
     -webkit-transform-origin:50% 50%; /* Safari and Chrome */
 	transform: rotate(180deg);
 	transform-origin: 50%,50%;
-	margin-top: 50px;
+	margin-bottom: 80px;
 }
 #sec1Bottom {
-	margin-bottom: 50px;
-
+	margin-top: 80px;
 }
 #sec1Left {
 	height: 100%;
@@ -518,6 +526,10 @@ p {
 
 #coverBottom {
 	height: 200px;
+	padding: 0;
+}
+#coverBottom>div {
+	padding: 0;
 }
 #sec1Center .DotsArrayHorizon {
 	width: auto;
@@ -530,7 +542,7 @@ p {
 	margin-right: 20px;
 }
 .Sec1Center>div:nth-child(1) {
-	margin-bottom: 50px;
+
 }
 #sec5Center .DotsArrayHorizon {
 	width: auto;
