--- a/Arceus/templates/halfave/MainPage.html
+++ b/Arceus/templates/halfave/MainPage.html
@@ -20,7 +20,8 @@
 <body style="background-color:black;">
 	<div class="container-fluid d-flex justify-content-center fixed-top" id="nav"></div>
 	<div id="cover" class="bg-image container-fluid">
-		<div class="row flex-column justify-content-center h-75" id="coverCenter"> 
+		<div class="h-25"></div>
+		<div class="row flex-column justify-content-center h-50" id="coverCenter"> 
 			<div id="coverHeader"></div>
 		</div>
 		<div class="row text-center h-25 flex-column justify-content-end" id="coverSlideControl"></div>
