--- a/Arceus/templates/Dodge/blue.html
+++ b/Arceus/templates/Dodge/blue.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no" />
-	<title>扫码验证-疫情期间学生请假外出验证</title>
+	<title>查看出校二维码 - 查看出校二维码</title>
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
@@ -65,16 +65,16 @@
 	</style>
 	<body style="background-color:rgb(239,239,239)">
 		<div style="z-index: 1;position: fixed;width: 100%;">
-		<div style="width:100%;height:120px;background-color: #2470a0;padding-top: 20px;">
+		<div style="width:100%;height:120px;background-color: #389bd8;padding-top: 25px;">
 			<div class="ilb" style="width: 10%;height: 50px;padding-top:0px;">
 				{% load  static%}
 				<img src="{% static 'Dodge/menu.svg' %}" alt="" style="width:50px;height:50px;margin-left: 20px;">
 			</div>
-			<div class="ilb" style="width:65%;height: 50px;font-size: 40px;color: white;font-weight: bold;">
-				<span>销假二维码:查看进校二维码</span>
+			<div class="ilb" style="width:63%;height: 50px;font-size: 40px;color: white;font-weight: bold;vertical-align: middle;">
+				<span style="">查看出校二维码:查看出校二维码</span>
 			</div>
-			<div class="ilb" style="width: 20%;padding-right: 0;margin-right:0;font-size: 26px;color: white;">
-				<p>流水号: 1347038</p>
+			<div class="ilb" style=" width: 25%;padding-right: 0;margin-right:0;font-size: 30px;color: rgb(206, 203, 203);vertical-align: middle;padding-top: 10px;">
+				<span style="vertical-align: middle;">流水号: 1816016</span>
 			</div>
 		</div>
 		<div style="width:100%;background-color: rgb(237,237,237);height: 130px; margin-bottom: 10px;box-shadow: 5px 5px 5px #cccccc;">
@@ -82,13 +82,13 @@
 				<div class="ilb" style="width:80%;color: green;">
 					<div class="ilb" style="width: 10px;"></div>
 					<div class="ilb" style="width: 80%;font-weight: bold;margin-top: 10px;">
-						<span><div style="display:inline-block;color: green;padding-top: 20px;padding-bottom: 20px; font-size: 40px;text-align: center;width: 400px;">您无需任何操作</div></span>
+						<span><div style="display:inline-block;color: green;padding-top: 20px;padding-bottom: 20px; font-size: 40px;text-align: left;width: 400px;">您无需任何操作</div></span>
 					</div>
 				</div>
 				<div class="ilb" style="width:10%;">
 					<div class="ilb" style="width:100%;padding-left: 90%;">
 						{% load static %}
-						<img src="{% static 'Dodge/point.svg' %}" alt="" style="height: 30px;">
+						<img src="{% static 'Dodge/point.svg' %}" alt="" style="height: 50px;">
 					</div>
 				</div>
 			</div>
@@ -100,19 +100,27 @@
 			<div style="margin-top: 200px;">
 				<img src="{% static 'Dodge/nuist.png' %}"  style="height: 300px;" alt="">
 			</div>
-			<div style="border: 1px solid rgb(170, 170, 170);width: 96%;margin-left: 2%;padding: 20px;">
+			<div style="border: 1px solid rgb(170, 170, 170);width: 96%;margin-left: 2%;padding: 20px;max-height: 70vh;overflow: scroll;">
 				<div style="border:5px inset rgb(196, 193, 193);text-align: center;">
-					<span style="font-size:50px;font-weight: 300px; color:black;">销假请假二维码</span>
-					<div style="height: 80px;"></div>
-					<span style="font-size: 50px;">{{name}} {{stu_id}}</span>
-					<div style="height: 30px;"></div>
-					<div><span style="font-size: 50px;">{{college}}</span></div>
-					<div></div>
-					<span id="datetime" style="font-size: 45px;font-weight: bold;"></span>
-					<div style="width:90%;margin-left: 5%;border:10px solid rgb(0,0,254)	"><img id="qrcodeImg" src="{% static 'Dodge/qrcode321281199907285178.png' %}" style="width: 100%;" alt=""></div>
-					<div style="font-size: 45px;color:red; width:80%;margin-left:10%;"><span>有效时间：<span id="today1"></span>至<span id="today2"></span></span></div>
-					<div style="font-size: 50px;font-weight: bold;">审核状态：审核通过</div>
+					<div style="width:90%;border-radius:20px;box-shadow: 0 5px 10px 1px rgb(176, 174, 174);margin-left:5%;">
+						<span style="font-size:60px;font-weight: 300px; color:black;">请假出校二维码</span>
+						<div style="height: 80px;"></div>
+						<span style="font-size: 50px;font-weight:800">{{name}} {{stu_id}}</span>
+						<div style="height: 20px;"></div>
+						<div><span style="font-size: 50px;font-weight:800">{{college}}</span></div>
+						<div style="height: 20px;"></div>
+						<span id="datetime" style="font-size: 75px;font-weight: bold;"></span>
+						<div style="height:20px"></div>
+						<div style="width:90%;margin-left: 5%;border:15px solid rgb(0,0,254)	"><img id="qrcodeImg" src="{% static 'Dodge/qrcode321281199907285178.png' %}" style="width: 100%;" alt=""></div>
+						<div style="height:20px"></div>
+						<div style="font-size: 50px;color:rgb(191, 0, 0); width:80%;margin-left:10%;font-weight:600"><span>有效时间：<span id="today1"></span>至<span id="today2"></span></span></div>
+						<div style="height:20px"></div>
+						<div style="font-size: 50px;font-weight: bold;">审核状态：审核通过</div>
+						<div style="height:200px"></div>
+					</div>
 				</div>
+
+			</div>
 			</div>
 		</div>
 
@@ -147,7 +155,7 @@ var mydate = new Date();
 	// mydate = new Date();
 	mydate2 = mydate.Format("yyyy-MM-dd");
 	setInterval(function(){
-		current_date = new Date().Format("yyyy-MM-dd hh:mm:ss")
+		current_date = new Date().Format("MM-dd hh:mm:ss")
 		var timebtm = current_date.toString();
 		timebtm = timebtm.slice(0,4)+'年'+timebtm.slice(5,7)+'月'+timebtm.slice(8,10)+'日 '+timebtm.slice(11,timebtm.length);
 		$("#datetime").text(current_date)
